# WordleRust

./: Cargo.toml  output
src/: main.rs
