[package]
name = "wordleBot"
version = "0.1.0"
edition = "2024"


[dependencies]
rayon = "1.10"
rand = "0.8"
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
openssl = "0.10"
regex = "1.9"
